styles/site.css
body { 
  background-color: #AC83c9;
}
#customerArea {
  /* background-color: #BF0000; */
  width: 207px;
  height: auto;
  text-align: center;
}

#customerWrapper {
  /* border: 1px solid black; */
  background-color: #9AC8EA;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.buttonWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}
.imageWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

#customerImage{
  width: 207px;
  height: auto;
  border: 1px solid black;
}
#scoreArea{
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
  background-color: #f8f6cf;
  width: 207px;
  margin-top: 2px;
  margin-bottom: auto;
}
.tdCsCoinSpace {
  background-color: black;
  width: 65px;
  height: 65px;
  text-align: center;
}
.shopTR {
  background-color: rgb(174, 141, 103);
}
.shopTD {
  position: relative;
  background-color: rgb(176, 137, 87);
  width: 100px;
}
.shopTD img {
  width: 75px;
  height: 75px;
}
.locked {
  background-color: rgba(79, 182, 42, 0.9);
}
.equipped {
  background-color: rgba(217, 113, 27, 0.9);
}
.unlocked {
  background-color: rgba(217, 192, 27, 0.9);
}
.shopTD button {
  position: absolute;
  top: 20px;
  left: 0px;
  width: 75px;
  height: 75px;
  opacity: 1;
  background-color: transparent;
  border: none;
}
.shopTD button:hover {
  opacity: 0.9;
  background-color: #9ede7386;
  cursor: pointer;
}


/******NEW STUFF******/

/*Size that things need to change if mobile view if we do mobile*/
/* @media screen and (max-width: 1120px) {
  
} */


#entireBoard {
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
  /* position: relative;
  left: 10%;
  top: 5%;
  width: 90%;
  height: 95%; */
  background-color: #5784b8;
  border: 1px solid black;
}
#gameboardSpan {
  background-color: #f4cfe0;
  border: 1px solid black;
}
#welcomeSpan, #helpSectionSpan {
  inline-size: 350px;
  overflow-wrap: break-word;
  background-color: #9AC8EA;
  border: 1px solid black;
  padding: 10px;
}
#shopSpan {
  background-color: #f4cfe0;
  border: 1px solid black;
  padding-left: 2px;
}

